--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{
     align-items: center;
     justify-content: center;
     border: 2px solid #000;
+    font-size: 80px;
 }
 .board__cell:nth-child(3n + 1){
    border-left: 0;
