--- a/style.css
+++ b/style.css
@@ -35,5 +35,24 @@ body{
 .board__cell:nth-last-child(-n+3){
     border-bottom: 0;
 }
+.sund-game-end{
+    position: fixed;
+    z-index: 3;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+.sund-game-end::before{
+    content: '';
 
+}
+.sund-game-end__overlay{
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 2;
+}
 
