--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     font-family: 'Open Sans', sans-serif;
 }
-.round{
+.sund-round{
     font-size: 24px;
 }
 .sund-screen__order{
