--- a/style.css
+++ b/style.css
@@ -1,30 +1,50 @@
+:root{
+    font-size: 14px;
+}
 body{
     margin: 0;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Fredoka', sans-serif;
+    background-color: rgb(225, 241, 255);
+}
+.sund-game-info{
+    font-size: 2rem;
+    text-align: center;
+    margin: 2rem 0;
 }
 .sund-round{
-    font-size: 24px;
-}
-.sund-screen__order{
-    font-size: 24px;
+    font-size: 3rem;
+    font-weight: 700;
+    text-transform: uppercase;
 }
 .sund-players{
-    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin: 2rem 0;
+}
+.player-score{
+    color: rgb(18, 161, 18);
+}
+.sund-screen__order{
+
+}
+.sund-players{
+    /* font-size: 24px; */
 }
 #sund-gameboard{
     height: 700px;
     width: 700px;
     margin: 0 auto;
-    padding: 80px 15px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    place-self: center;
 }
 .board__cell{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    place-content: center;
     border: 2px solid #000;
-    font-size: 80px;
+    font-size: 150px;
 }
 .board__cell:nth-child(3n + 1){
    border-left: 0;
