--- a/style.css
+++ b/style.css
@@ -64,10 +64,30 @@ body{
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    padding: 3rem;
+    background-color: #fff;
+    border-radius: 5px;
+    text-align: center;
 }
-.sund-game-end::before{
-    content: '';
-
+.sund-game-end__text{
+    font-size: 2rem;
+    margin-bottom: 2rem;
+}
+.sund-game-end__restart{
+    padding: 1rem 2rem;
+    background-color: rgb(225, 241, 255);
+    border: 1ps solid rgb(40, 86, 126);
+    cursor: pointer;
+    font-size: 1rem;
+    border-radius: 5px;
+    transition: all .3s ease-in-out;
+}
+.sund-game-end__restart:hover, 
+.sund-game-end__restart:focus{
+    background-color: rgb(151, 200, 243);
+}
+.sund-game-end__restart:active{
+    transform: scale(.95);
 }
 .sund-game-end__overlay{
     position: fixed;
